正在开始中间代码生成